# BruteForcePrimes

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: primes.h
src/: main.cpp  primes.cpp
